--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -13,12 +13,15 @@ jobs:
   linux:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
       - uses: actions/setup-node@v1
         with:
           node-version: 12
       - run: npm i
-      - run: ls; sh ./patch.sh
+
+      - run: sh ./patch.sh
       - run: npm run dist
 
       - name: Upload Appimage
@@ -36,8 +39,9 @@ jobs:
   windows:
     runs-on: windows-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
       - uses: actions/setup-node@v1
         with:
           node-version: 12
@@ -58,8 +62,9 @@ jobs:
   macos:
     runs-on: macos-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
       - uses: actions/setup-node@v1
         with:
           node-version: 12
