Fix submodule: use https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "exc"]
 	path = musicblocks
-	url = git@github.com:sugarlabs/musicblocks
+	url = https://github.com/sugarlabs/musicblocks
 	branch = master
