--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -13,14 +13,12 @@ jobs:
   linux:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-        with:
-          submodules: true
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
       - run: npm i
-
+      - run: git clone https://github.com/sugarlabs/musicblocks
       - run: sh ./patch.sh
       - run: npm run dist
 
@@ -39,13 +37,12 @@ jobs:
   windows:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v1
-        with:
-          submodules: true
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
       - run: npm i
+      - run: git clone https://github.com/sugarlabs/musicblocks
       - run: sh ./patch.sh
       - run: npm run dist
       - run: |
@@ -62,13 +59,12 @@ jobs:
   macos:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-        with:
-          submodules: true
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
       - run: npm i
+      - run: git clone https://github.com/sugarlabs/musicblocks
       - run: sh ./patch.sh
       - run: npm run dist
       - run: |
