--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -28,13 +28,13 @@ jobs:
         uses: actions/upload-artifact@v1.0.0
         with:
           name: Musicblocks-continuous-x86_64.AppImage
-          path: Musicblocks-*.AppImage
+          path: dist/Musicblocks-*.AppImage
 
       - name: Upload Snap
         uses: actions/upload-artifact@v1.0.0
         with:
           name: Musicblocks_3.1.0_amd64.snap
-          path: Musicblocks-*_amd64.snap
+          path: dist/Musicblocks-*_amd64.snap
 
   windows:
     runs-on: windows-latest
@@ -47,6 +47,9 @@ jobs:
       - run: git clone https://github.com/sugarlabs/musicblocks
       - run: sh ./patch.sh
       - run: npm run dist
+        env: 
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - run: |
           l
           ls dist
@@ -56,7 +59,7 @@ jobs:
         uses: actions/upload-artifact@v1.0.0
         with:
           name: Musicblocks-continuous-x86_64.exe
-          path: Musicblocks-*.exe
+          path: dist/Musicblocks-*.exe
 
   macos:
     runs-on: macos-latest
@@ -69,6 +72,8 @@ jobs:
       - run: git clone https://github.com/sugarlabs/musicblocks
       - run: sh ./patch.sh
       - run: npm run dist
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: |
           l
           ls dist
@@ -77,6 +82,6 @@ jobs:
         uses: actions/upload-artifact@v1.0.0
         with:
           name: Musicblocks-continuous-x86_64.dmg
-          path: Musicblocks-*.dmg
+          path: dist/Musicblocks-*.dmg
 
       
