--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -52,7 +52,8 @@ jobs:
           node-version: 12
       - run: npm i
       - run: git clone https://github.com/sugarlabs/musicblocks
-      - run: gsed -i ./patch.sh 's,sed,gsed'
+      - name: Run gsed
+        run: gsed -i ./patch.sh 's,sed,gsed'
       - run: sh ./patch.sh
       - run: npm run dist
         env: 
