--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -81,7 +81,7 @@ jobs:
       - run: git clone https://github.com/sugarlabs/musicblocks
 
       - name: Run gsed
-        run: gsed -i 's,sed,gsed' ./patch.sh 
+        run: gsed -i 's/sed/gsed/g' patch.sh
 
       - run: sh ./patch.sh
       - run: npm run dist
