--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "category": "org.sugarlabs.musicblocks"
     },
     "linux": {
-      "category": "Multimedia;Education;"
+      "category": "Education"
     }
   }
 
